Use model name for root key in API
so that multiple models can be returned, which is relevant when updating
group_order_articles.
