# doc/swagger.v1.yml
@@ -47,7 +47,7 @@ paths:
           schema:
             type: object
             properties:
-              data:
+              user:
                 $ref: '#/definitions/User'
         401:
           description: not logged-in
@@ -70,7 +70,7 @@ paths:
           schema:
             type: object
             properties:
-              data:
+              article_categories:
                 type: array
                 items:
                   $ref: '#/definitions/ArticleCategory'
@@ -91,7 +91,7 @@ paths:
           schema:
             type: object
             properties:
-              data:
+              article_category:
                 $ref: '#/definitions/ArticleCategory'
         404:
           description: not found
@@ -114,7 +114,7 @@ paths:
           schema:
             type: object
             properties:
-              data:
+              orders:
                 type: array
                 items:
                   $ref: '#/definitions/Order'
@@ -135,7 +135,7 @@ paths:
           schema:
             type: object
             properties:
-              data:
+              order:
                 $ref: '#/definitions/Order'
         404:
           description: not found
@@ -158,7 +158,7 @@ paths:
           schema:
             type: object
             properties:
-              data:
+              order_articles:
                 type: array
                 items:
                   $ref: '#/definitions/OrderArticle'
@@ -179,7 +179,7 @@ paths:
           schema:
             type: object
             properties:
-              data:
+              order:
                 $ref: '#/definitions/OrderArticle'
         404:
           description: not found
@@ -202,7 +202,7 @@ paths:
           schema:
             type: object
             properties:
-              data:
+              group_order_articles:
                 type: array
                 items:
                   $ref: '#/definitions/GroupOrderArticle'
@@ -219,7 +219,7 @@ paths:
       tags:
         - 5. GroupOrderArticle
       parameters:
-        - name: data
+        - name: group_order_article
           in: body
           required: true
           schema:
@@ -239,7 +239,7 @@ paths:
             type: object
             description: newly created group order article
             properties:
-              data:
+              group_order_article:
                 $ref: '#/definitions/GroupOrderArticle'
         403:
           description: user has no ordergroup, or minimum balance is below the limit
@@ -264,7 +264,7 @@ paths:
           schema:
             type: object
             properties:
-              data:
+              group_order_article:
                 $ref: '#/definitions/GroupOrderArticle'
         403:
           description: user has no ordergroup
@@ -281,7 +281,7 @@ paths:
       tags:
         - 5. GroupOrderArticle
       parameters:
-        - name: data
+        - name: group_order_article
           in: body
           required: true
           schema:
@@ -298,7 +298,7 @@ paths:
             type: object
             description: updated group order article
             properties:
-              data:
+              group_order_article:
                 $ref: '#/definitions/GroupOrderArticle'
         403:
           description: user has no ordergroup, or minimum balance is below the limit
@@ -350,7 +350,7 @@ paths:
           schema:
             type: object
             properties:
-              data:
+              financial_transactions:
                 type: array
                 items:
                   $ref: '#/definitions/FinancialTransaction'
@@ -375,7 +375,7 @@ paths:
           schema:
             type: object
             properties:
-              data:
+              financial_transaction:
                 $ref: '#/definitions/FinancialTransaction'
         403:
           description: user has no ordergroup
